# VARS

./: README.md  pyproject.toml  requirements.txt
configs/: local_models.yaml  reranker.yaml  retrieval.yaml  user_model.yaml
src/personalization/: types.py
src/personalization/config/: registry.py  settings.py
src/personalization/feedback/: gating.py  handlers.py  llm_reward.py  local_llm_reward.py  reward_model.py  sampler.py  schemas.py
src/personalization/models/embedding/: __init__.py  base.py  qwen3_8b.py
src/personalization/models/llm/: __init__.py  base.py  vllm_chat.py
src/personalization/models/preference_extractor/: __init__.py  base.py  gpt4o_extractor.py  llm_extractor.py  rule_extractor.py
src/personalization/models/reranker/: base.py  qwen3_reranker.py
src/personalization/retrieval/: pipeline.py
src/personalization/retrieval/preference_store/: schemas.py
src/personalization/serving/: __init__.py  personalized_llm.py
src/personalization/user_model/: features.py  scoring.py  session_state.py  tensor_store.py
src/personalization/user_model/policy/: reinforce.py
